Add trailing slashes to menu items

--- a/fec_eregs/static/fec_eregs/js/templates/nav-legal.hbs
+++ b/fec_eregs/static/fec_eregs/js/templates/nav-legal.hbs
@@ -3,16 +3,16 @@
     <div class="mega__inner">
       <div class="row">
         <div class="usa-width-one-fourth">
-          <h2 class="mega-heading__title icon-heading--data-flag-circle--primary"><a href="/legal-resources">Explore all legal resources</a></h2>
+          <h2 class="mega-heading__title icon-heading--data-flag-circle--primary"><a href="/legal-resources/">Explore all legal resources</a></h2>
         </div>
         <div class="usa-width-one-third mega__intro">
           <ul class="t-sans list--2-columns u-padding--top">
-            <li class="mega__item"><a href="/data/legal/advisory-opinions">Advisory opinions</a></li>
-            <li class="mega__item"><a href="/legal-resources/enforcement">Enforcement</a></li>
-            <li class="mega__item"><a href="/data/legal/statutes">Statutes</a></li>
-            <li class="mega__item"><a href="/legal-resources/legislation">Legislation</a></li>
-            <li class="mega__item"><a href="/legal-resources/regulations">Regulations</a></li>
-            <li class="mega__item"><a href="/legal-resources/court-cases">Court cases</a></li>
+            <li class="mega__item"><a href="/data/legal/advisory-opinions/">Advisory opinions</a></li>
+            <li class="mega__item"><a href="/legal-resources/enforcement/">Enforcement</a></li>
+            <li class="mega__item"><a href="/data/legal/statutes/">Statutes</a></li>
+            <li class="mega__item"><a href="/legal-resources/legislation/">Legislation</a></li>
+            <li class="mega__item"><a href="/legal-resources/regulations/">Regulations</a></li>
+            <li class="mega__item"><a href="/legal-resources/court-cases/">Court cases</a></li>
             <li class="mega__item"><a href="https://transition.fec.gov/law/policy.shtml">Policy and other guidance</a></li>
           </ul>
         </div>
