--- a/fec_eregs/templates/regulations/main-header.html
+++ b/fec_eregs/templates/regulations/main-header.html
@@ -36,12 +36,12 @@
       <ul class="site-nav__panel site-nav__panel--main">
         <li><h2 class="site-nav__title u-under-lg-only">Menu</h2></li>
         <li class="site-nav__item u-under-lg-only">
-          <a class="site-nav__link" href="{{ FEC_CMS_URL }}" rel="home">
+          <a class="site-nav__link" href="{{ FEC_CMS_URL }}/" rel="home">
             <span class="site-nav__link__title">Home</span>
           </a>
         </li>
         <li class="site-nav__item" data-submenu="data">
-          <a href="{{ FEC_WEB_URL }}" class="site-nav__link">
+          <a href="{{ FEC_WEB_URL }}/" class="site-nav__link">
             <span class="site-nav__link__title">Campaign finance data</span>
           </a>
         </li>
@@ -51,18 +51,18 @@
           </a>
         </li>
         <li class="site-nav__item" data-submenu="legal">
-          <a href="{{ FEC_CMS_URL }}/legal-resources" class="site-nav__link is-parent">
+          <a href="{{ FEC_CMS_URL }}/legal-resources/" class="site-nav__link is-parent">
             <span class="site-nav__link__title">Legal resources</span>
           </a>
         </li>
         <li class="site-nav__item--secondary" data-submenu="about">
-          <a href="{{ FEC_CMS_URL }}/about" class="site-nav__link">
+          <a href="{{ FEC_CMS_URL }}/about/" class="site-nav__link">
             <span class="site-nav__link__title">About</span>
           </a>
         </li>
 
         <li class="site-nav__item utility-nav__item u-under-lg-only">
-          <a href="{{ FEC_CMS_URL }}/calendar" class="site-nav__link">Calendar</a>
+          <a href="{{ FEC_CMS_URL }}/calendar/" class="site-nav__link">Calendar</a>
         </li>
         <li class="site-nav__item site-nav__link utility-nav__item u-under-lg-only">
           <form accept-charset="UTF-8" action="{{ cms_url }}/search" class="combo combo--search--mini" method="get" role="search">
@@ -85,7 +85,7 @@
       </ul>
     </div>
     <button for="nav-toggle" class="js-nav-toggle site-nav__button" aria-controls="site-menu">Menu</button>
-    <a title="Home" href="{{ FEC_CMS_URL }}" class="site-title"><span class="u-visually-hidden">Federal Election Commission | United States of America</span></a>
+    <a title="Home" href="{{ FEC_CMS_URL }}/" class="site-title"><span class="u-visually-hidden">Federal Election Commission | United States of America</span></a>
   </nav>
   <div class="page-header page-header--primary">
     <ul class="breadcrumbs">
