--- a/fec_eregs/static/fec_eregs/js/templates/nav-about.hbs
+++ b/fec_eregs/static/fec_eregs/js/templates/nav-about.hbs
@@ -7,8 +7,8 @@
         </div>
         <div class="usa-width-one-half mega__intro">
           <ul class="usa-width-one-third">
-           <li class="mega__item"><a href="/updates">News and announcements</a></li>
-           <li class="mega__item"><a href="/meetings">Commission meetings</a></li>
+           <li class="mega__item"><a href="/updates/">News and announcements</a></li>
+           <li class="mega__item"><a href="/meetings/">Commission meetings</a></li>
            <li class="mega__item"><a href="/about/mission-and-history/">Mission and history</a></li>
           </ul>
           <ul class="usa-width-one-third">
@@ -18,7 +18,7 @@
            </ul>
            <ul class="usa-width-one-third">
             <li class="mega__item"><a href="/about/#working-with-the-fec">Working with the FEC</a></li>
-            <li class="mega__item"><a href="/contact-us">Contact</a></li>
+            <li class="mega__item"><a href="/contact-us/">Contact</a></li>
           </ul>
         </div>
       </div>
