--- a/fec_eregs/static/fec_eregs/js/templates/nav-data.hbs
+++ b/fec_eregs/static/fec_eregs/js/templates/nav-data.hbs
@@ -3,26 +3,26 @@
     <div class="mega__inner">
       <div class="row">
         <div class="usa-width-one-fourth">
-          <h2 class="mega-heading__title icon-heading--data-flag-circle--primary"><a href="/data">Explore all data</a></h2>
+          <h2 class="mega-heading__title icon-heading--data-flag-circle--primary"><a href="/data/">Explore all data</a></h2>
         </div>
         <div class="usa-width-one-third mega__intro">
           <ul class="t-sans list--2-columns u-padding--top">
-            <li class="mega__item"><a href="/data/browse-data?tab=raising">Raising</a></li>
-            <li class="mega__item"><a href="/data/browse-data?tab=spending">Spending</a></li>
-            <li class="mega__item"><a href="/data/browse-data?tab=loans-debts">Loans and debts</a></li>
-            <li class="mega__item"><a href="/data/browse-data?tab=filings">Filings and reports</a></li>
-            <li class="mega__item"><a href="/data/browse-data?tab=candidates">Candidates</a></li>
-            <li class="mega__item"><a href="/data/browse-data?tab=committees">Committees</a></li>
-            <li class="mega__item"><a href="/data/browse-data?tab=bulk-data">Bulk data</a></li>
+            <li class="mega__item"><a href="/data/browse-data/?tab=raising">Raising</a></li>
+            <li class="mega__item"><a href="/data/browse-data/?tab=spending">Spending</a></li>
+            <li class="mega__item"><a href="/data/browse-data/?tab=loans-debts">Loans and debts</a></li>
+            <li class="mega__item"><a href="/data/browse-data/?tab=filings">Filings and reports</a></li>
+            <li class="mega__item"><a href="/data/browse-data/?tab=candidates">Candidates</a></li>
+            <li class="mega__item"><a href="/data/browse-data/?tab=committees">Committees</a></li>
+            <li class="mega__item"><a href="/data/browse-data/?tab=bulk-data">Bulk data</a></li>
             <li class="mega__item"><a href="/data/browse-data/?tab=historical">Historical statistics</a></li>
           </ul>
         </div>
         <div class="usa-width-one-third u-padding--left">
           <div class="icon-heading icon-heading--person-location-circle">
-            <p class="t-sans t-small icon-heading__text"><a href="/data/elections">Find elections. Search by state or ZIP code</a></p>
+            <p class="t-sans t-small icon-heading__text"><a href="/data/elections/">Find elections. Search by state or ZIP code</a></p>
           </div>
           <div class="icon-heading icon-heading--individual-contributions-circle">
-            <p class="t-sans t-small icon-heading__text"> <a href="/data/receipts/individual-contributions">Look up contributions from specific individuals</a></p>
+            <p class="t-sans t-small icon-heading__text"> <a href="/data/receipts/individual-contributions/">Look up contributions from specific individuals</a></p>
           </div>
         </div>
       </div>
