Add trailing slash, fix typo & protocol

--- a/fec_eregs/templates/regulations/logo-large.html
+++ b/fec_eregs/templates/regulations/logo-large.html
@@ -2,4 +2,4 @@
 Large image which appears on the generic 404 page
 {% endcomment %}
 {% load static from staticfiles %}
-<img src="{%static "fec_eregs/img/fec-logo.png" %}" class="logo" alt="Federal Elections Commission" width="151px">
+<img src="{% static "fec_eregs/img/fec-logo.png" %}" class="logo" alt="Federal Election Commission" width="151px">
