--- a/fec_eregs/templates/regulations/logo.html
+++ b/fec_eregs/templates/regulations/logo.html
@@ -1,4 +1,4 @@
 {% load staticfiles %}
-<a href="http://www.fec.gov"><img class="logo" alt="Federal Elections Commission"
+<a href="https://www.fec.gov/"><img class="logo" alt="Federal Election Commission"
                                   style="margin: 0.25em; height: 45px; width: 45px; vertical-align: middle;"
                                   src="{% static "fec_eregs/img/fec-logo.png" %}" />FEC</a>
