Replace deprecated templates tag staticfiles with static

--- a/fec_eregs/templates/regulations/base.html
+++ b/fec_eregs/templates/regulations/base.html
@@ -1,5 +1,5 @@
 {% extends "regulations/base.html" %}
-{% load static from staticfiles %}
+{% load static %}
 
 {% block preload %}
 <link rel="stylesheet" href="{% static "fec_eregs/css/main.css" %}">
