--- a/fec_eregs/templates/regulations/favicon.html
+++ b/fec_eregs/templates/regulations/favicon.html
@@ -1,5 +1,5 @@
 {% comment %}
   <link> tags, etc. which go in the header
 {% endcomment %}
-{% load static from staticfiles %}
+{% load static %}
 <link rel="shortcut icon" type="image/png" href="{%static "fec_eregs/img/favicon.png" %}"/>
