--- a/fec_eregs/templates/regulations/generic_universal.html
+++ b/fec_eregs/templates/regulations/generic_universal.html
@@ -1,5 +1,5 @@
 {% extends "regulations/generic_universal.html" %}
-{% load staticfiles %}
+{% load static %}
 
 {% block body %}
 <header id="site-header" class="reg-header">
