--- a/fec_eregs/templates/regulations/logo-large.html
+++ b/fec_eregs/templates/regulations/logo-large.html
@@ -1,5 +1,5 @@
 {% comment %}
 Large image which appears on the generic 404 page
 {% endcomment %}
-{% load static from staticfiles %}
+{% load static %}
 <img src="{% static "fec_eregs/img/fec-logo.png" %}" class="logo" alt="Federal Election Commission" width="151px">
