--- a/fec_eregs/templates/regulations/main-header.html
+++ b/fec_eregs/templates/regulations/main-header.html
@@ -1,4 +1,4 @@
-{% load static from staticfiles %}
+{% load static %}
 <div class="main-head">
   <div class="fec-disclaimer">
     <span class="disclaimer__right">
